--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "template-hubot-script",
-  "description": "Template for a Hubot script package.",
+  "name": "hubot-openweathermap",
+  "description": "Retrieves the current conditions for a configured location or by query",
   "version": "0.0.0",
-  "author": "Your Name <name@example.com>",
-  "homepage": "https://github.com/stephenyeargin/template-hubot-script",
+  "author": "Stephen Yeargin <stephen@yearg.in>",
+  "homepage": "https://github.com/stephenyeargin/hubot-openweathermap",
   "license": "MIT",
   "keywords": [
     "hubot",
@@ -11,10 +11,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/stephenyeargin/template-hubot-script.git"
+    "url": "git://github.com/stephenyeargin/hubot-openweathermap.git"
   },
   "bugs": {
-    "url": "https://github.com/stephenyeargin/template-hubot-script/issues"
+    "url": "https://github.com/stephenyeargin/hubot-openweathermap/issues"
   },
   "peerDependencies": {
     "hubot": ">=3 || 0.0.0-development"
