--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/stephenyeargin/hubot-openweathermap/issues"
   },
   "peerDependencies": {
+    "discord.js": "^14",
     "hubot": ">=3 || 0.0.0-development"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "node": "18.19.0"
   },
   "dependencies": {
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "semver": "^7.5.4"
   }
 }
