--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,90 +1,49 @@
-name: Publish Package
-
 on:
   push:
     branches:
       - main
 
+name: npm-publish
+
 permissions:
   contents: write
-  packages: write
-
-env:
-  NPM_REGISTRY: "https://npm.pkg.github.com/"
-  GITHUB_REGISTRY: "https://npm.pkg.github.com/"
+  id-token: write
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the code
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      # Set up Node.js
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v6
         with:
-          node-version: '20'
+          node-version: "20"
+          registry-url: https://registry.npmjs.org
 
-      # Install dependencies and test
       - run: npm ci
       - run: npm test
 
-      # Get the PACKAGE_NAME from package.json
-      - name: Get PACKAGE_NAME from package.json
-        id: get_package_name
+      - name: Publish to npm
+        id: publish
         run: |
-          PACKAGE_NAME=$(jq -r '.name' package.json)
-          echo "PACKAGE_NAME=$PACKAGE_NAME" >> $GITHUB_ENV
+          # Check if version is already published
+          PACKAGE_NAME=$(node -p "require('./package.json').name")
+          PACKAGE_VERSION=$(node -p "require('./package.json').version")
 
-      # Get current version from package.json
-      - name: Get current version from package.json
-        id: get_version
-        run: echo "CURRENT_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
-
-      # Get the latest published version from NPM
-      - name: Get latest version from NPM
-        id: latest_npm_version
-        run: |
-          LATEST_VERSION=$(npm show $PACKAGE_NAME version)
-          echo "LATEST_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
-
-      # Check if version has changed and set output
-      - name: Check if version has changed
-        id: version_check
-        run: |
-          if [ "$LATEST_VERSION" == "$CURRENT_VERSION" ]; then
-            echo "Version has not changed. Skipping publish."
-            echo "has_changed=false" >> $GITHUB_ENV
+          if npm view "$PACKAGE_NAME@$PACKAGE_VERSION" version 2>/dev/null; then
+            echo "Version $PACKAGE_VERSION already published"
+            echo "type=" >> $GITHUB_OUTPUT
           else
-            echo "Version has changed. Proceeding with publish."
-            echo "has_changed=true" >> $GITHUB_ENV
+            echo "Publishing $PACKAGE_NAME@$PACKAGE_VERSION..."
+            npm publish --access public
+            echo "type=patch" >> $GITHUB_OUTPUT
+            echo "version=$PACKAGE_VERSION" >> $GITHUB_OUTPUT
           fi
 
-      # Publish to NPM and GitHub Packages (only if version has changed)
-      - name: Publish to NPM and GitHub Packages
-        if: ${{ env.has_changed == 'true' }}
+      - if: ${{ steps.publish.outputs.type }}
+        name: Create Release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
-          npm publish --registry=https://registry.npmjs.org/
-          npm publish --registry=${{ env.GITHUB_REGISTRY }}
-
-      # Tag the commit with the new version (only if version has changed)
-      - name: Create Git tag for new version
-        if: ${{ env.has_changed == 'true' }}
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_prefix: 'v'
-          custom_tag: ${{ env.CURRENT_VERSION }}
-
-      # Create release on GitHub (only if version has changed)
-      - name: Create a GitHub release
-        if: ${{ env.has_changed == 'true' }}
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+          VERSION="v${{ steps.publish.outputs.version }}"
+          gh release create $VERSION --generate-notes
